  Previously, that was only available as a separate application via `python3 -m
  scripts.keytester`.
- New `:config-diff` command which opens the `qute://configdiff` page.
- New `--debug-flag log-cookies` to log cokies to the debug log for
  debugging.

Changed
~~~~~~~

- The `content.cookies.accept` setting now accepts URL patterns.

Fixed
~~~~~

- Using `:open -s` now only rewrites `http://` in URLs to `https://`, not other
  schemes like `qute://`.
- When an unhandled exception happens in certain parts of the code (outside of
  the main thread), qutebrowser did crash or freeze when trying to show its
  exception handler. This is now fixed.
- `:inspector` now works correctly when cookies are disabled globally.

v1.11.1 (2020-05-07)
--------------------

Security
~~~~~~~~

- CVE-2020-11054: After a certificate error was overridden by the user,
  qutebrowser displays the URL as yellow (`colors.statusbar.url.warn.fg`).
  However, when the affected website was subsequently loaded again, the URL was
  mistakenly displayed as green (`colors.statusbar.url.success_https`). While
  the user already has seen a certificate error prompt at this point (or set
  `content.ssl_strict` to `false` which is not recommended), this could still
  provide a false sense of security. This is now fixed.

v1.11.0 (2020-04-27)
--------------------

Added
~~~~~

- New settings:
  * `search.wrap` which can be set to false to prevent wrapping around the page
    when searching. With QtWebEngine, Qt 5.14 or newer is required.
  * `content.unknown_url_scheme_policy` which allows controlling when an
    external application is opened for external links (never, from user
    interaction, always).
  * `content.fullscreen.overlay_timeout` to configure how long the fullscreen
    overlay should be displayed. If set to `0`, no overlay is displayed.
  * `hints.padding` to add additional padding for hints.
  * `hints.radius` to set a border radius for hints (set to `3` by default).