@@ -2,7 +2,6 @@ beautifulsoup4
 cheroot
 coverage
 Flask
-hunter
 hypothesis
 pytest
 pytest-bdd
@@ -11,12 +10,20 @@ pytest-cov
 pytest-instafail
 pytest-mock
 pytest-qt
-pytest-repeat
 pytest-rerunfailures
-pytest-travis-fold
 pytest-xvfb
+
+## optional:
+# To test :debug-trace, gets skipped if hunter is not installed
+hunter
+# To test scripts/dev/run_vulture.py which is not part of the release tarball
 vulture
+# For colored pytest output (though also a direct qutebrowser dependency))
 pygments
+# Output folding on Travis
+pytest-travis-fold
+# --repeat switch (used to manually repeat tests)
+pytest-repeat
 
 #@ markers: jaraco.functools python_version>="3.6"
 #@ add: jaraco.functools==2.0; python_version<"3.6"  # rq.filter: <= 2.0
